--- a/ERP-backend/Dockerfile
+++ b/ERP-backend/Dockerfile
@@ -1,2 +1,13 @@
-# syntax=docker/dockerfile:1
+FROM node:18
 
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm install
+
+COPY . .
+
+RUN npm run build
+
+CMD [ "npm", "run", "start-fast" ]
