basic nginx frontend proxy works

--- a/ERP-backend/Dockerfile
+++ b/ERP-backend/Dockerfile
@@ -10,4 +10,7 @@ COPY . .
 
 RUN npm run build
 
+# https://cheatsheetseries.owasp.org/cheatsheets/Docker_Security_Cheat_Sheet.html
+RUN groupadd -r myuser && useradd -r -g myuser myuser
+
 CMD [ "npm", "run", "start-fast" ]
