--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -1,15 +1,23 @@
 events {
-    # worker_connections 1024;  # Adjust this number based on your needs
+    worker_connections 1024;  # Adjust this number based on your needs
 }
 
 http {
     server {
         listen 80;
 
+        # Proxy requests to /api/dupa to the ERP backend
+        location /cats {
+            proxy_pass http://erp-backend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy all other requests to the React app
         location / {
             proxy_pass http://react-app:8080;
-
-            # Preserve host and other headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
