--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       context: ./API-gateway
     networks:
       - outside
-      # - backend
+      - backend
       - frontend
     ports:
       - "80:80" # Exposes port 80 on the host and forwards it to port 80 in the container.
@@ -35,22 +35,22 @@ services:
     stdin_open: true
     tty: true
 
-  # erp-backend:
-  #   build:
-  #     context: ./ERP-backend  # Point to the directory containing your Dockerfile
-  #     dockerfile: Dockerfile  # Specify Dockerfile if it's named differently
-  #   ports:
-  #     - "3000:3000"  # Expose the NestJS application port
-  #   volumes:
-  #     - ./ERP-backend:/app  # Mount the current directory to /app in the container for hot reloading
-  #     - /app/node_modules  # Avoid mounting node_modules from the host machine
-  #   networks:
-  #     - frontend
-  #   environment:
-  #     - NODE_ENV=development  # Set the environment to development
-  #   command: npm run start:dev  # Start the NestJS app with hot reloading
-  #   stdin_open: true  # Keep stdin open
-  #   tty: true  # Allocate a pseudo-TTY
+  erp-backend:
+    build:
+      context: ./ERP-backend  # Point to the directory containing your Dockerfile
+      dockerfile: Dockerfile  # Specify Dockerfile if it's named differently
+    ports:
+      - "3000:3000"  # Expose the NestJS application port
+    volumes:
+      - ./ERP-backend:/app  # Mount the current directory to /app in the container for hot reloading
+      - /app/node_modules  # Avoid mounting node_modules from the host machine
+    networks:
+      - backend
+    environment:
+      - NODE_ENV=development  # Set the environment to development
+    command: npm run start:dev  # Start the NestJS app with hot reloading
+    stdin_open: true  # Keep stdin open
+    tty: true  # Allocate a pseudo-TTY
 
 #   # db: backend, db_admin_sql
 #   # p4admin: db_admin
@@ -61,7 +61,7 @@ networks:
     # internal: true
   outside:
   backend:
-    driver: bridge
+    # driver: bridge
     # internal: true
   db_admin_sql:
     # internal: true
