[db] some point

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -7,12 +7,27 @@ http {
         listen 80;
 
         # Proxy requests to /api/dupa to the ERP backend
-        location /cats {
+        location /api/dupa {
             proxy_pass http://erp-backend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Remove /api/dupa from the URL path
+            rewrite ^/api/dupa/?(.*)$ /$1 break;
+        }
+
+        # Proxy requests to /api/dupa to the ERP backend
+        location /api/dupaa {
+            proxy_pass http://erp-backendd:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Remove /api/dupa from the URL path
+            rewrite ^/api/dupaa/?(.*)$ /$1 break;
         }
 
         # Proxy all other requests to the React app
