--- a/db_postgres/docker-compose.yml
+++ b/db_postgres/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: postgres:latest
     environment:
       # POSTGRES_DB: main_db   # The default database
-      POSTGRES_USER: my_user
-      POSTGRES_PASSWORD: my_password
+      POSTGRES_USER: super_secret_main_user
+      POSTGRES_PASSWORD: super_secret_password
     ports:
       - "5432:5432"
     volumes:
