--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -46,9 +46,9 @@ services:
       POSTGRES_PASSWORD: dupa123_44inofai4fuae9gyg9yhu
     ports:
        - "5050:80"
-    volumes:
-       - ./pgadmin/servers.json:/pgadmin4/servers.json # preconfigured servers/connections
-       - ./pgadmin/pgpass:/tmp/mountpoint.pgpass
+    # volumes:
+    #    - ./pgadmin/servers.json:/pgadmin4/servers.json # preconfigured servers/connections
+    #    - ./pgadmin/pgpass:/tmp/mountpoint.pgpass
     # process to find this was pain
     entrypoint: >
       /bin/sh -c "
@@ -58,24 +58,31 @@ services:
       chmod 600 /var/lib/pgadmin/storage/admin_hello.com/.pgpass;
       /entrypoint.sh
       "
-    # configs:
-    #   - source: servers.json
-    #     target: /pgadmin4/servers.json
-    #   - source: pgpass
-    #     target: /pgpass
+    configs:
+      - source: servers.json
+        target: /pgadmin4/servers.json
+      - source: pgpass
+        target: /tmp/mountpoint.pgpass
 
 configs:
   pgpass:
     content: db-psql:5432:*:super_user_hehe:dupa123_44inofai4fuae9gyg9yhu
   servers.json:
     content: |
-      {"Servers": {"1": {
-        "Name": "ERP Database",
-        "Group": "Servers",
-        "Host": "pdb-sql",
-        "Port": 5432,
-        "MaintenanceDB": "postgres",
-        "Username": "super_user_hehe",
-        "PassFile": "/pgpass",
-        "SSLMode": "prefer"
-      }}}
+      {
+        "Servers": {
+          "1": {
+            "Name": "PostgreSQL",
+            "Group": "Servers",
+            "Host": "db-psql",
+            "Port": 5432,
+            "MaintenanceDB": "postgres",
+            "Username": "super_user_hehe",
+            "ConnectionParameters": {
+              "sslmode": "prefer",
+              "connect_timeout": "10",
+              "passfile": "/.pgpass"
+            }
+          }
+        }
+      }
