--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -40,7 +40,7 @@ services:
 
 configs:
   pgpass:
-    content: db-psql:5432:*:super_user_hehe:dupa123_44inofai4fuae9gyg9yhu
+    content: db-psql:5432:*:${POSTGRES_USER}:${POSTGRES_PASSWORD}
   servers.json:
     content: |
       {
@@ -51,7 +51,7 @@ configs:
             "Host": "db-psql",
             "Port": 5432,
             "MaintenanceDB": "postgres",
-            "Username": "super_user_hehe",
+            "Username": "${POSTGRES_USER}",
             "ConnectionParameters": {
               "sslmode": "prefer",
               "connect_timeout": "10",
