--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -4,11 +4,8 @@ services:
   db-psql:
     image: postgres:latest
     environment:
-      # POSTGRES_DB: main_db   # The default database
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5432:5432"
     volumes:
       - ./db_postgres/init-db:/docker-entrypoint-initdb.d/  # Mount the custom script
       - ./db_postgres/db_data:/var/lib/postgresql/data
@@ -20,7 +17,6 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL_PART_BEFORE_AT}@${PGADMIN_DEFAULT_EMAIL_PART_AFTER_AT}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-      # DATABASE_HOST: db-psql
     ports:
        - "5050:80"
     # process to find this was pain
@@ -33,15 +29,15 @@ services:
       /entrypoint.sh
       "
     configs:
-      - source: servers.json
+      - source: pgadmin-servers.json
         target: /pgadmin4/servers.json
-      - source: pgpass
+      - source: pgadmin-pgpass
         target: /tmp/mountpoint.pgpass
 
 configs:
-  pgpass:
+  pgadmin-pgpass:
     content: db-psql:5432:*:${POSTGRES_USER}:${POSTGRES_PASSWORD}
-  servers.json:
+  pgadmin-servers.json:
     content: |
       {
         "Servers": {
