--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -18,16 +18,13 @@ http {
             rewrite ^/api/dupa/?(.*)$ /$1 break;
         }
 
-        # Proxy requests to /api/dupa to the ERP backend
-        location /api/dupaa {
-            proxy_pass http://erp-backendd:3000;
+        location /pgadmin {
+            proxy_set_header X-Script-Name /pgadmin;  # finding out this line took me only 8 hours
+            proxy_pass http://pgadmin;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Remove /api/dupa from the URL path
-            rewrite ^/api/dupaa/?(.*)$ /$1 break;
         }
 
         # Proxy all other requests to the React app
