hardcode the domain

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -5,6 +5,7 @@ events {
 http {
     server {
         listen 80;
+        server_name erp.best.krakow.pl www.erp.best.krakow.pl;
 
         # Proxy requests to /api/dupa to the ERP backend
         location /api/dupa {
