--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -20,7 +20,7 @@ http {
 
         location /pgadmin {
             proxy_set_header X-Script-Name /pgadmin;  # finding out this line took me only 8 hours
-            proxy_pass http://pgadmin;
+            proxy_pass http://pgadmin:5050;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
