--- a/auth_and_permissions/package.json
+++ b/auth_and_permissions/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
