--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,8 +95,8 @@ services:
     build:
       context: ./ERP-backend # Point to the directory containing your Dockerfile
       dockerfile: Dockerfile # Specify Dockerfile if it's named differently
-    # ports:
-    #   - "3000:3000" # Expose the NestJS application port
+    ports:
+      - "3001:3000" # Expose the NestJS application port
     volumes:
       - ./ERP-backend:/app # Mount the current directory to /app in the container for hot reloading
       - /app/node_modules # Avoid mounting node_modules from the host machine
