[nginx] auth_and_permissions service setup

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -6,6 +6,23 @@ http {
     server {
         listen 80;
 
+        # This location matches the specific path /api/auth/setup-roles
+        location /api/auth/setup-roles {
+            # You can define what to do here, such as serve static content,
+            # or leave empty to do nothing
+            # For example:
+            return 200 "This path is not redirected";
+        }
+
+        # This location matches all paths starting with /api/auth/ but excluding /api/auth/thispleasedont
+        location ~ ^/api/auth/(?!setup-roles).* {
+            proxy_pass http://auth_and_permissions:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Proxy requests to /api/dupa to the ERP backend
         location /api/dupa {
             proxy_pass http://erp-backend:3000;
