--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -23,30 +23,30 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Proxy requests to /api/dupa to the ERP backend
-        location /api/dupa {
-            proxy_pass http://erp-backend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        # # Proxy requests to /api/dupa to the ERP backend
+        # location /api/dupa {
+        #     proxy_pass http://erp-backend:3000;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Remove /api/dupa from the URL path
-            rewrite ^/api/dupa/?(.*)$ /$1 break;
-        }
+        #     # Remove /api/dupa from the URL path
+        #     rewrite ^/api/dupa/?(.*)$ /$1 break;
+        # }
 
-        location /pgadmin {
-            proxy_set_header X-Script-Name /pgadmin;  # finding out this line took me only 8 hours
-            proxy_pass http://pgadmin:5050;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        # location /pgadmin {
+        #     proxy_set_header X-Script-Name /pgadmin;  # finding out this line took me only 8 hours
+        #     proxy_pass http://pgadmin:5050;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
 
         # Proxy all other requests to the React app
         location / {
-            proxy_pass http://react-app:8080;
+            proxy_pass http://frontend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
