--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,8 @@ services:
       - DB_NAME=${AUTH_SERVICE_DB_NAME}
       - DB_USERNAME=${AUTH_SERVICE_DB_USER}
       - DB_PASSWORD=${AUTH_SERVICE_DB_PASSWORD}
+      - AUTH_GOOGLE_CLIENT_ID=${AUTH_GOOGLE_CLIENT_ID}
+      - AUTH_GOOGLE_CLIENT_SECRET=${AUTH_GOOGLE_CLIENT_SECRET}
     stdin_open: true
     tty: true
     depends_on:
