--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -51,6 +51,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_set_header Upgrade $http_upgrade;  # Enable WebSocket support (for hmr purpose only)
+            proxy_set_header Connection "upgrade";  # Required for WebSocket (for hmr purpose only)
         }
     }
 }
