[auth, frontend] permission panel, bugged

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -54,6 +54,21 @@ http {
 
             proxy_set_header Upgrade $http_upgrade;  # Enable WebSocket support (for hmr purpose only)
             proxy_set_header Connection "upgrade";  # Required for WebSocket (for hmr purpose only)
+
+    #     # Handle client-side routing
+    #     try_files $uri $uri/ @rewrites;  # Try to serve files first, then handle rewrites
+    # }
+
+    # # Handle rewrites to index.html for client-side routing
+    # location @rewrites {
+    #     rewrite ^ /index.html break;
+    # }
+
+    # # Optional: serve static assets directly for better performance
+    # location /static/ {
+    #     # Set cache expiration for static files
+    #     expires 1y;
+    #     add_header Cache-Control "public";
         }
     }
 }
