--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
