--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
   },
