--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,8 @@ services:
       - AUTH_GOOGLE_ORGANIZATION_DOMAIN=${AUTH_GOOGLE_ORGANIZATION_DOMAIN}
       - AUTH_RSA_PRIVATE_KEY_FOR_JWT=${AUTH_RSA_PRIVATE_KEY_FOR_JWT}
       - RSA_PUBLIC_KEY_FOR_JWT=${RSA_PUBLIC_KEY_FOR_JWT}
+      - AUTH_NO_REPLY_EMAIL=${AUTH_NO_REPLY_EMAIL}
+      - AUTH_NO_REPLY_EMAIL_PASSWORD=${AUTH_NO_REPLY_EMAIL_PASSWORD}
     stdin_open: true
     tty: true
     depends_on:
